// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SearchBar > does not navigate or set search term with empty trimmed query 1`] = `
<DocumentFragment>
  <form
    class="sc-fsYfdN gMdzwM"
  >
    <div
      class="sc-qZrbh hoLtJU"
    >
      <svg
        data-testid="search-icon"
        fill="currentColor"
        height="1em"
        id="fa-arrow-right"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
        />
      </svg>
      <input
        data-testid="search-input"
        placeholder="Type to search..."
        value="     "
      />
      <button
        class="sc-ktwOfi ddPxBG button"
        data-testid="submit-button"
        type="submit"
      >
        <svg
          fill="currentColor"
          height="1em"
          id="fa-arrow-right"
          stroke="currentColor"
          stroke-width="0"
          style="color: rgb(5, 72, 108);"
          viewBox="0 0 448 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
          />
        </svg>
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SearchBar > keeps the search query in the input after submission 1`] = `
<DocumentFragment>
  <form
    class="sc-fsYfdN gMdzwM"
  >
    <div
      class="sc-qZrbh hoLtJU"
    >
      <svg
        data-testid="search-icon"
        fill="currentColor"
        height="1em"
        id="fa-arrow-right"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
        />
      </svg>
      <input
        data-testid="search-input"
        placeholder="Type to search..."
        value="test query"
      />
      <button
        class="sc-ktwOfi ddPxBG button"
        data-testid="submit-button"
        type="submit"
      >
        <svg
          fill="currentColor"
          height="1em"
          id="fa-arrow-right"
          stroke="currentColor"
          stroke-width="0"
          style="color: rgb(5, 72, 108);"
          viewBox="0 0 448 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
          />
        </svg>
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SearchBar > renders correctly 1`] = `
<DocumentFragment>
  <form
    class="sc-fsYfdN gMdzwM"
  >
    <div
      class="sc-qZrbh hoLtJU"
    >
      <svg
        data-testid="search-icon"
        fill="currentColor"
        height="1em"
        id="fa-arrow-right"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
        />
      </svg>
      <input
        data-testid="search-input"
        placeholder="Type to search..."
        value="initial"
      />
      <button
        class="sc-ktwOfi ddPxBG button"
        data-testid="submit-button"
        type="submit"
      >
        <svg
          fill="currentColor"
          height="1em"
          id="fa-arrow-right"
          stroke="currentColor"
          stroke-width="0"
          style="color: rgb(5, 72, 108);"
          viewBox="0 0 448 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
          />
        </svg>
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SearchBar > trims search query and navigates on valid form submit 1`] = `
<DocumentFragment>
  <form
    class="sc-fsYfdN gMdzwM"
  >
    <div
      class="sc-qZrbh hoLtJU"
    >
      <svg
        data-testid="search-icon"
        fill="currentColor"
        height="1em"
        id="fa-arrow-right"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
        />
      </svg>
      <input
        data-testid="search-input"
        placeholder="Type to search..."
        value="  test query  "
      />
      <button
        class="sc-ktwOfi ddPxBG button"
        data-testid="submit-button"
        type="submit"
      >
        <svg
          fill="currentColor"
          height="1em"
          id="fa-arrow-right"
          stroke="currentColor"
          stroke-width="0"
          style="color: rgb(5, 72, 108);"
          viewBox="0 0 448 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
          />
        </svg>
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SearchBar > updates input value on change 1`] = `
<DocumentFragment>
  <form
    class="sc-fsYfdN gMdzwM"
  >
    <div
      class="sc-qZrbh hoLtJU"
    >
      <svg
        data-testid="search-icon"
        fill="currentColor"
        height="1em"
        id="fa-arrow-right"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
        />
      </svg>
      <input
        data-testid="search-input"
        placeholder="Type to search..."
        value="test query"
      />
      <button
        class="sc-ktwOfi ddPxBG button"
        data-testid="submit-button"
        type="submit"
      >
        <svg
          fill="currentColor"
          height="1em"
          id="fa-arrow-right"
          stroke="currentColor"
          stroke-width="0"
          style="color: rgb(5, 72, 108);"
          viewBox="0 0 448 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
          />
        </svg>
      </button>
    </div>
  </form>
</DocumentFragment>
`;
